--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,22 +1,37 @@
-<div class="app-title">
-  <div>
-    <h1>
-      <i class="fa fa-dashboard"></i> Blank Page</h1>
-    <p>Start a beautiful journey here</p>
-  </div>
-  <ul class="app-breadcrumb breadcrumb">
-    <li class="breadcrumb-item">
-      <i class="fa fa-home fa-lg"></i>
+<!-- Navbar-->
+<header class="app-header"><a class="app-header__logo" href="index.html">Aquarion</a>
+  <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"></a>
+  <!-- Navbar Right Menu-->
+  <ul class="app-nav">
+    <li class="app-search">
+      <input class="app-search__input" type="search" placeholder="Search">
+      <button class="app-search__button"><i class="fa fa-search"></i></button>
     </li>
-    <li class="breadcrumb-item">
-      <a href="#">Blank Page</a>
+
+    <!-- User Menu-->
+    <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i></a>
+      <ul class="dropdown-menu settings-menu dropdown-menu-right">
+        <!--<li><a class="dropdown-item" href="page-user.html"><i class="fa fa-cog fa-lg"></i> Settings</a></li>-->
+        <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-user fa-lg"></i> Profile</a></li>
+        <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
+      </ul>
     </li>
   </ul>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="tile">
-      <div class="tile-body">Create a beautiful dashboard</div>
+</header>
+<!-- Sidebar menu-->
+<div class="app-sidebar__overlay" data-toggle="sidebar"></div>
+<aside class="app-sidebar">
+  <div class="app-sidebar__user">
+    <img class="app-sidebar__user-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
+    <div>
+      <p class="app-sidebar__user-name">Not logged in</p>
+      <!-- <p class="app-sidebar__user-designation">Frontend Developer</p> -->
     </div>
   </div>
-</div>
+  <ul class="app-menu">
+
+  </ul>
+</aside>
+<main class="app-content">
+    <router-outlet></router-outlet>
+</main>
