--- a/client/src/app/login.component.html
+++ b/client/src/app/login.component.html
@@ -1,22 +1,47 @@
-<div class="app-title">
-  <div>
-    <h1>
-      <i class="fa fa-dashboard"></i> Blank Page</h1>
-    <p>Start a beautiful journey here</p>
+<section class="material-half-bg">
+  <div class="cover"></div>
+</section>
+<section class="login-content">
+  <div class="logo">
+    <h1>Vali</h1>
   </div>
-  <ul class="app-breadcrumb breadcrumb">
-    <li class="breadcrumb-item">
-      <i class="fa fa-home fa-lg"></i>
-    </li>
-    <li class="breadcrumb-item">
-      <a href="#">Blank Page</a>
-    </li>
-  </ul>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="tile">
-      <div class="tile-body">Create a beautiful dashboard</div>
-    </div>
+  <div class="login-box">
+    <form class="login-form" action="index.html">
+      <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
+      <div class="form-group">
+        <label class="control-label">USERNAME</label>
+        <input class="form-control" type="text" placeholder="Email" autofocus>
+      </div>
+      <div class="form-group">
+        <label class="control-label">PASSWORD</label>
+        <input class="form-control" type="password" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <div class="utility">
+          <div class="animated-checkbox">
+            <label>
+              <input type="checkbox"><span class="label-text">Stay Signed in</span>
+            </label>
+          </div>
+          <p class="semibold-text mb-2"><a href="#" data-toggle="flip">Forgot Password ?</a></p>
+        </div>
+      </div>
+      <div class="form-group btn-container">
+        <button class="btn btn-primary btn-block"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
+      </div>
+    </form>
+    <form class="forget-form" action="index.html">
+      <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Forgot Password ?</h3>
+      <div class="form-group">
+        <label class="control-label">EMAIL</label>
+        <input class="form-control" type="text" placeholder="Email">
+      </div>
+      <div class="form-group btn-container">
+        <button class="btn btn-primary btn-block"><i class="fa fa-unlock fa-lg fa-fw"></i>RESET</button>
+      </div>
+      <div class="form-group mt-3">
+        <p class="semibold-text mb-0"><a href="#" data-toggle="flip"><i class="fa fa-angle-left fa-fw"></i> Back to Login</a></p>
+      </div>
+    </form>
   </div>
-</div>
+</section>
