--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 </section>
 <section class="login-content">
   <div class="logo">
-    <h1>Vali</h1>
+    <h1>Baldios</h1>
   </div>
   <div class="login-box">
     <form class="login-form" action="index.html">
