--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,41 +6,30 @@
     <h1>Baldios</h1>
   </div>
   <div class="login-box">
-    <form class="login-form" action="index.html">
+    <form class="login-form" >
       <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
       <div class="form-group">
         <label class="control-label">USERNAME</label>
         <input class="form-control" type="text" placeholder="Email" autofocus>
+        <div class="form-control-feedback">Sorry, username can't be empty</div>
       </div>
       <div class="form-group">
         <label class="control-label">PASSWORD</label>
-        <input class="form-control" type="password" placeholder="Password">
+        <input class="form-control is-invalid" type="password" placeholder="Password">
+        <div class="form-control-feedback">Sorry, password can't be empty</div>
       </div>
       <div class="form-group">
         <div class="utility">
-          <div class="animated-checkbox">
+          <!-- <div class="animated-checkbox">
             <label>
               <input type="checkbox"><span class="label-text">Stay Signed in</span>
             </label>
-          </div>
+          </div> -->
           <p class="semibold-text mb-2"><a href="#" data-toggle="flip">Forgot Password ?</a></p>
         </div>
       </div>
       <div class="form-group btn-container">
-        <button class="btn btn-primary btn-block"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
-      </div>
-    </form>
-    <form class="forget-form" action="index.html">
-      <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Forgot Password ?</h3>
-      <div class="form-group">
-        <label class="control-label">EMAIL</label>
-        <input class="form-control" type="text" placeholder="Email">
-      </div>
-      <div class="form-group btn-container">
-        <button class="btn btn-primary btn-block"><i class="fa fa-unlock fa-lg fa-fw"></i>RESET</button>
-      </div>
-      <div class="form-group mt-3">
-        <p class="semibold-text mb-0"><a href="#" data-toggle="flip"><i class="fa fa-angle-left fa-fw"></i> Back to Login</a></p>
+        <button class="btn btn-primary btn-block" (click)="signInClicked()"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
       </div>
     </form>
   </div>
