--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.login-content .login-box {
+  min-height: 420px;
+}
