--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
     <!-- Navbar-->
     <header class="app-header"><a class="app-header__logo" href="index.html">Baldios</a>
-      <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"></a>
+      <!-- Sidebar toggle button--><a class="app-sidebar__toggle" data-toggle="sidebar"></a>
       <!-- Navbar Right Menu-->
       <ul class="app-nav">
         <li class="app-search">
