--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
-
 <div class="app-title">
   <div>
-    <h1><i class="fa fa-dashboard"></i>Home</h1>
-    <p>This is home</p>
+    <h1><i class="fa fa-dashboard"></i>Dashboard</h1>
+    <p>This is dashboard</p>
   </div>
   <ul class="app-breadcrumb breadcrumb">
     <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
@@ -12,7 +11,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="tile">
-      <div class="tile-body">This is home</div>
+      <div class="tile-body">This is dashboard</div>
     </div>
   </div>
 </div>
