--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <label class="control-label">PASSWORD</label>
-        <input class="form-control is-invalid" type="password" placeholder="Password">
+        <input class="form-control" type="password" placeholder="Password">
         <div class="form-control-feedback">Sorry, password can't be empty</div>
       </div>
       <div class="form-group">
@@ -25,7 +25,7 @@
               <input type="checkbox"><span class="label-text">Stay Signed in</span>
             </label>
           </div> -->
-          <p class="semibold-text mb-2"><a href="#" data-toggle="flip">Forgot Password ?</a></p>
+          <!-- <p class="semibold-text mb-2"><a href="#" data-toggle="flip">Forgot Password ?</a></p> -->
         </div>
       </div>
       <div class="form-group btn-container">
