--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,17 +6,17 @@
     <h1>Baldios</h1>
   </div>
   <div class="login-box">
-    <form class="login-form" >
+    <div class="login-form" >
       <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
       <div class="form-group">
         <label class="control-label">USERNAME</label>
-        <input class="form-control" type="text" placeholder="Email" autofocus>
-        <div class="form-control-feedback">Sorry, username can't be empty</div>
+        <input class="form-control" type="text" placeholder="Username" autofocus>
+        <div class="form-control-feedback" *ngIf="this.vm.UsernameError==''">{{this.vm.UsernameError}}</div>
       </div>
       <div class="form-group">
         <label class="control-label">PASSWORD</label>
         <input class="form-control" type="password" placeholder="Password">
-        <div class="form-control-feedback">Sorry, password can't be empty</div>
+        <div class="form-control-feedback">{{this.vm.PasswordError}}</div>
       </div>
       <div class="form-group">
         <div class="utility">
@@ -31,6 +31,6 @@
       <div class="form-group btn-container">
         <button class="btn btn-primary btn-block" (click)="signInClicked()"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
       </div>
-    </form>
+    </div>
   </div>
 </section>
