check error during form login

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -10,13 +10,13 @@
       <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
       <div class="form-group">
         <label class="control-label">USERNAME</label>
-        <input class="form-control" type="text" placeholder="Username" autofocus>
-        <div class="form-control-feedback" *ngIf="this.vm.UsernameError==''">{{this.vm.UsernameError}}</div>
+        <input class="form-control" type="text" placeholder="Username" [(ngModel)]="vm.loginDTO.Username" autofocus>
+        <div class="form-control-feedback" *ngIf="getUsernameErrorVisible()">Insert username</div>
       </div>
       <div class="form-group">
         <label class="control-label">PASSWORD</label>
-        <input class="form-control" type="password" placeholder="Password">
-        <div class="form-control-feedback">{{this.vm.PasswordError}}</div>
+        <input class="form-control" type="password" placeholder="Password" [(ngModel)]="vm.loginDTO.Password">
+        <div class="form-control-feedback" *ngIf="getPasswordErrorVisible()">Insert password</div>
       </div>
       <div class="form-group">
         <div class="utility">
